Fixed overlapping margin errors breaking links

--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -38,9 +38,9 @@
   flex-wrap: wrap;
   max-width: 800px;
   margin-top: 3rem;
-} */
+}
 
-/* .card {
+.card {
   margin: 1rem;
   flex-basis: 45%;
   padding: 1.5rem;
@@ -50,9 +50,8 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-} */
-
-/* .card:hover,
+}
+.card:hover,
 .card:focus,
 .card:active {
   color: #0070f3;
@@ -101,7 +100,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: -80px;
+  margin-top: -60px;
 }
 
 .socialIcon {
@@ -125,11 +124,6 @@
   .signatureAnimation {
     max-width: 100%;
     padding-bottom: 50px;
-  }
-
-  .socialIconsContainer {
-    flex-direction: column;
-    align-items: center;
   }
 
   .socialIconsContainer {
